<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:alphabeticShortcut="n"
        android:icon="@drawable/ic_action_note_add"
        android:title="@string/add_profile"
        app:showAsAction="always">
        <menu>
            <item
                android:id="@+id/action_scan_qr_code"
                android:title="@string/add_profile_methods_scan_qr_code" />
            <item
                android:id="@+id/action_import_clipboard"
                android:alphabeticShortcut="v"
                android:title="@string/action_import" />
            <item
                android:id="@+id/action_manual_settings"
                android:alphabeticShortcut="n"
                android:title="@string/add_profile_methods_manual_settings">
                <menu>
                    <item
                        android:id="@+id/action_new_socks"
                        android:title="@string/action_socks" />
                    <item
                        android:id="@+id/action_new_http"
                        android:title="@string/action_http" />
                    <item
                        android:id="@+id/action_new_ss"
                        android:title="@string/action_shadowsocks" />
                    <item
                        android:id="@+id/action_new_ssr"
                        android:title="@string/action_shadowsocksr" />
                    <item
                        android:id="@+id/action_new_vmess"
                        android:title="@string/action_vmess" />
                    <item
                        android:id="@+id/action_new_vless"
                        android:title="@string/action_vless" />
                    <item
                        android:id="@+id/action_new_trojan"
                        android:title="@string/action_trojan" />
                    <item
                        android:id="@+id/action_new_trojan_go"
                        android:title="@string/action_trojan_go" />
                </menu>
            </item>

        </menu>
    </item>
</menu>
