<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">

        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_baseline_person_24"
            app:key="serverUserId"
            app:title="@string/uuid" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_360"
            app:key="serverAlterId"
            app:title="@string/alter_id"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            app:entries="@array/vmess_encryption_entry"
            app:entryValues="@array/vmess_encryption_value"
            app:icon="@drawable/ic_notification_enhanced_encryption"
            app:key="serverEncryption"
            app:title="@string/encryption"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            app:entries="@array/networks_entry"
            app:entryValues="@array/networks_value"
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="serverNetwork"
            app:title="@string/network"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            app:defaultValue="none"
            app:entries="@array/kcp_quic_headers_entry"
            app:entryValues="@array/kcp_quic_headers_value"
            app:icon="@drawable/ic_baseline_texture_24"
            app:key="serverHeader"
            app:title="@string/header_type"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            app:defaultValue="none"
            app:entries="@array/quic_security_entry"
            app:entryValues="@array/quic_security_value"
            app:icon="@drawable/ic_baseline_security_24"
            app:key="serverQuicSecurity"
            app:title="@string/quic_security"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_airplanemode_active_24"
            app:key="serverHost"
            app:title="@string/http_host"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_format_align_left_24"
            app:key="serverPath"
            app:title="@string/http_path"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            app:entries="@array/transport_layer_encryption_entry"
            app:entryValues="@array/transport_layer_encryption_value"
            app:icon="@drawable/ic_baseline_layers_24"
            app:key="serverSecurity"
            app:title="@string/security"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="serverSecurityCategory"
        app:title="@string/security_settings">
        <EditTextPreference
            app:icon="@drawable/ic_action_copyright"
            app:key="serverSNI"
            app:title="@string/sni"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_legend_toggle_24"
            app:key="serverALPN"
            app:title="@string/alpn"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_vpn_key_24"
            app:key="serverCertificates"
            app:title="@string/certificates"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_push_pin_24"
            app:key="serverPinnedCertificateChain"
            app:title="@string/pinned_peer_certificate_chain_sha256"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_notification_enhanced_encryption"
            app:key="serverAllowInsecure"
            app:summary="@string/allow_insecure_sum"
            app:title="@string/allow_insecure" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="serverWsCategory"
        app:title="@string/cag_ws">
        <EditTextPreference
            app:defaultValue="0"
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="serverWsMaxEarlyData"
            app:title="@string/ws_max_early_data"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:icon="@drawable/ic_baseline_stream_24"
            app:key="serverEarlyDataHeaderName"
            app:title="@string/early_data_header_name"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreference
            app:icon="@drawable/ic_baseline_texture_24"
            app:key="serverWsBrowserForwarding"
            app:summary="@string/ws_browser_forwarding_sum"
            app:title="@string/ws_browser_forwarding" />
    </PreferenceCategory>

    <PreferenceCategory
        app:icon="@drawable/ic_baseline_grid_3x3_24"
        app:key="serverVMessExperimentsCategory"
        app:title="@string/experimental_settings">
        <SwitchPreference
            app:key="serverVMessExperimentalAuthenticatedLength"
            app:summary="@string/experimental_authenticated_length"
            app:title="AuthenticatedLength" />
        <SwitchPreference
            app:key="serverVMessExperimentalNoTerminationSignal"
            app:summary="@string/experimental_no_termination_signal"
            app:title="NoTerminationSignal" />
    </PreferenceCategory>


</PreferenceScreen>