<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">

        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            app:entries="@array/brook_protocol_entry"
            app:entryValues="@array/brook_protocol_value"
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="serverProtocol"
            app:title="@string/protocol"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_settings_password"
            app:key="serverPassword"
            app:title="@string/password" />
        <SwitchPreference
            app:icon="@drawable/baseline_wrap_text_24"
            app:key="serverUoT"
            app:title="@string/udp_over_tcp"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory
        app:key="serverWsCategory"
        app:title="@string/cag_ws">
        <EditTextPreference
            app:icon="@drawable/ic_baseline_format_align_left_24"
            app:key="serverPath"
            app:title="@string/ws_path"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/baseline_public_24"
            app:key="serverWithoutBrookProtocol"
            app:title="@string/without_brook_protocol"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_warning_24"
            app:key="serverAllowInsecure"
            app:title="@string/allow_insecure"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>


</PreferenceScreen>