<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">

        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            app:entries="@array/enc_method_entry"
            app:entryValues="@array/enc_method_value"
            app:icon="@drawable/ic_notification_enhanced_encryption"
            app:key="serverMethod"
            app:title="@string/enc_method"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/preference_dialog_password"
            app:icon="@drawable/ic_settings_password"
            app:key="serverPassword"
            app:title="@string/password" />
    </PreferenceCategory>


</PreferenceScreen>