<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">

        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/layout_password_dialog"
            app:icon="@drawable/ic_baseline_person_24"
            app:key="serverUserId"
            app:title="@string/uuid" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_360"
            app:key="serverAlterId"
            app:title="@string/alter_id"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            app:entries="@array/securities_entry"
            app:entryValues="@array/securities_value"
            app:icon="@drawable/ic_notification_enhanced_encryption"
            app:key="serverSecurity"
            app:title="@string/security"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            app:entries="@array/networks_entry"
            app:entryValues="@array/networks_value"
            app:icon="@drawable/ic_baseline_compare_arrows_24"
            app:key="serverNetwork"
            app:title="@string/network"
            app:useSimpleSummaryProvider="true" />
        <com.takisoft.preferencex.SimpleMenuPreference
            app:entries="@array/headers_entry"
            app:entryValues="@array/headers_value"
            app:icon="@drawable/ic_baseline_texture_24"
            app:key="serverHeader"
            app:title="@string/header_type"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:icon="@drawable/ic_baseline_airplanemode_active_24"
            app:key="serverHost"
            app:title="@string/request_host"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_format_align_left_24"
            app:key="serverPath"
            app:title="@string/path"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_action_copyright"
            app:key="serverSNI"
            app:title="@string/sni"
            app:useSimpleSummaryProvider="true" />
        <SwitchPreference
            app:icon="@drawable/ic_baseline_https_24"
            app:key="serverTLS"
            app:title="@string/tls" />
    </PreferenceCategory>


</PreferenceScreen>