<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditTextPreference
        app:icon="@drawable/ic_social_emoji_symbols"
        app:key="profileName"
        app:title="@string/profile_name"
        app:useSimpleSummaryProvider="true" />

    <PreferenceCategory app:title="@string/proxy_cat">

        <EditTextPreference
            app:icon="@drawable/ic_hardware_router"
            app:key="serverAddress"
            app:title="@string/server_address"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_maps_directions_boat"
            app:key="serverPort"
            app:title="@string/server_port"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:icon="@drawable/ic_baseline_person_24"
            app:key="serverUsername"
            app:title="@string/username_opt"
            app:useSimpleSummaryProvider="true" />
        <EditTextPreference
            app:dialogLayout="@layout/preference_dialog_password"
            app:icon="@drawable/ic_settings_password"
            app:key="serverPassword"
            app:title="@string/password_opt" />
        <CheckBoxPreference
            app:icon="@drawable/ic_baseline_radio_button_checked_24"
            app:key="serverUdp"
            app:summary="@string/udp_summary"
            app:title="@string/server_udp" />
    </PreferenceCategory>


</PreferenceScreen>